--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "iostream": "cpp"
-    }
+    },
+    "code-runner.saveFileBeforeRun": true,
+    "code-runner.runInTerminal": true
 }
